<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/layout_boom_num"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="80dp"

            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/boom_num"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editText_boom_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="12345678987654321"
            android:singleLine="true"
            android:textSize="14sp"
            >

        </EditText>

        <Button
            android:id="@+id/btn_scan_boom_num"
            android:text="扫描单号"
            android:layout_width="0dp"
            android:layout_weight="1.8"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_pass_box_num"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/pass_box_num"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editText_pass_box_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="12345678987654321"
            android:singleLine="true"
            android:textSize="14sp"
            >

        </EditText>

        <Button
            android:id="@+id/btn_scan_pass_box_num"
            android:text="扫描周转箱"
            android:layout_width="0dp"
            android:layout_weight="1.8"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_is_boom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="BOOM收料"
            android:textSize="10sp"/>

        <CheckBox
            android:id="@+id/cb_is_continuous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:text="连续扫码"
            android:textSize="10sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/id"
            android:textSize="18sp"/>

        <TextView
            android:gravity="left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/barcode"
            android:textSize="18sp"/>

        <TextView
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/count"
            android:textSize="18sp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:background="#454444"
        android:layout_height="1dp"/>

    <ListView
        android:id="@+id/lv_boom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0">

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="完成"/>

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="扫码"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="清空"/>
    </LinearLayout>
</LinearLayout>
